<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/parent">

    <RelativeLayout
        style="@style/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/register_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:weightSum="12">

            <LinearLayout
                style="@style/parent"
                android:layout_weight="3"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical">

                <ImageView
                    style="@style/parent"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="login background" />

            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView

            style="@style/loginCard"
            android:layout_below="@+id/register_header"
            android:layout_gravity="center"
            android:background="@color/whiteCardColor"
            android:elevation="5dp"
            app:cardCornerRadius="@dimen/loginCardRadius">

            <LinearLayout
                style="@style/linearParent"
                android:layout_gravity="center"
                android:padding="@dimen/loginViewsMargin">

                <TextView
                    style="@style/headerTextPrimary"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/register" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/signup_text_margin_top">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUserNameRegisterUser"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_user_name_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/signup_text_margin_top">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPasswordRegisterUser"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signUpButton"
                    style="@style/loginButton"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="Register" />

                <TextView
                    android:id="@+id/goToLoginText"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/signup_login_hint"
                    android:textAlignment="center"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</ScrollView>